RESOLVED FIXED15832
fast/dom/gc-10.html crashes when run alone
https://bugs.webkit.org/show_bug.cgi?id=15832
Summary fast/dom/gc-10.html crashes when run alone
Alexey Proskuryakov
Reported 2007-11-04 10:37:38 PST
r27424. run-webkit-tests fast/dom/gc-10.html BTW, run-webkit-tests doesn't catch the crash, and reports success. I suppose this happens because DRT crashes on exit, after dumping expected results. Thread 0 Crashed: 0 DumpRenderTree 0x00023cc0 LayoutTestController::dumpFrameLoadCallbacks() const + 20 (LayoutTestController.h:93) 1 DumpRenderTree 0x00012c04 -[FrameLoadDelegate webView:didCancelClientRedirectForFrame:] + 56 (FrameLoadDelegate.mm:324) 2 com.apple.WebKit 0x004aed24 CallDelegate(objc_object* (*)(objc_object*, objc_selector*, ...), WebView*, objc_object*, objc_selector*, objc_object*) + 368 (WebView.mm:4319) 3 com.apple.WebKit 0x004afce8 CallFrameLoadDelegate(objc_object* (*)(objc_object*, objc_selector*, ...), WebView*, objc_selector*, objc_object*) + 72 (WebView.mm:4477) 4 com.apple.WebKit 0x00422474 WebFrameLoaderClient::dispatchDidCancelClientRedirect() + 180 (WebFrameLoaderClient.mm:472) 5 com.apple.WebCore 0x0119c4dc WebCore::FrameLoader::clientRedirectCancelledOrFinished(bool) + 72 (FrameLoader.cpp:2647) 6 com.apple.WebCore 0x0119c604 WebCore::FrameLoader::stopRedirectionTimer() + 236 (FrameLoader.cpp:1858) 7 com.apple.WebCore 0x011a1b74 WebCore::FrameLoader::cancelRedirection(bool) + 48 (FrameLoader.cpp:668) 8 com.apple.WebCore 0x011af850 WebCore::FrameLoader::stopLoading(bool) + 1128 (FrameLoader.cpp:632) 9 com.apple.WebCore 0x011af81c WebCore::FrameLoader::stopLoading(bool) + 1076 (FrameLoader.cpp:620) 10 com.apple.WebCore 0x011af9c0 WebCore::FrameLoader::closeURL() + 44 (FrameLoader.cpp:658) 11 com.apple.WebCore 0x011afa38 WebCore::FrameLoader::detachFromParent() + 64 (FrameLoader.cpp:3158) 12 com.apple.WebKit 0x004b3fdc -[WebView(WebPrivate) _close] + 160 (WebView.mm:677) 13 com.apple.WebKit 0x0049e7b8 -[WebView close] + 60 (WebView.mm:1968) 14 DumpRenderTree 0x0000a264 dumpRenderTree(int, char const**) + 3136 15 DumpRenderTree 0x0000a4f4 main + 120 16 DumpRenderTree 0x00002bfc _start + 760 17 DumpRenderTree 0x00002900 start + 48
Attachments
proposed fix (18.66 KB, patch)
2007-11-04 11:05 PST, Alexey Proskuryakov
mjs: review+
Alexey Proskuryakov
Comment 1 2007-11-04 11:05:59 PST
Created attachment 17035 [details] proposed fix
Maciej Stachowiak
Comment 2 2007-11-04 12:12:35 PST
Comment on attachment 17035 [details] proposed fix r=me
Alexey Proskuryakov
Comment 3 2007-11-04 12:39:21 PST
Committed revision 27428.
Note You need to log in before you can comment on or make changes to this bug.